# 28p650dk9

./: .gitignore  BuildAll.bat  BuildFW.bat  BuildSim.bat  README.md  xmake.lua
.theia/: launch.json
cg/: Controller.c  Controller.h  Controller_cla.cla  Controller_hal.c  Controller_log.txt  Controller_main.c  cg.mk
sim/buck/: CMakeLists.txt  Makefile  README.cmake  README.md  make_ctrl.mk  stypes.h  xmake.lua
sim/buck/plecs/: opil_buck.plecs
sim/buck/src/: buckcontrol.c  buckcontrol.h  main.c
sim/opil/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  opilhost.c  opilhost.h  opiltarget.c  opiltarget.h
sim/opil/.cache/clangd/index/: ctlrif.c.B2921DC1DF4574A3.idx  ctlrif.h.930DD73625F20730.idx  hostCommSock.c.3F315038E8D13506.idx  hostCommSock.h.605A911045A177ED.idx  logging_levels.h.2FF2BC35E4FFE460.idx  logging_stack.h.16478A0E6FBEF50C.idx  opilhost.c.7421FA21D1FCE38E.idx  opilhost.h.06E821AAF0770BF8.idx  opiltarget.c.700BBC728A9C9DD2.idx  opiltarget.h.E9EDA7D960695EE7.idx  simif.c.F8F87D2C9147FBB7.idx  simif.h.F862497CDC014FFB.idx  stypes.h.C6A4961A7D55E268.idx  targetCommSock.c.8A590CBE554342D7.idx  targetCommSock.h.ED1B8BEBE3560D81.idx
sim/opil/comm/: hostCommSock.h  targetCommSock.h
sim/opil/comm/linux/: hostCommSock.c  targetCommSock.c
sim/opil/comm/pynq/: targetCommPynqSock.c  targetCommPynqSock.h
sim/opil/comm/win/: hostCommSock.c  targetCommSock.c
sim/opil/ctlrif/: ctlrif.c  ctlrif.h
sim/opil/ctlrif/pynq/: pil.c  pil.h
sim/opil/docs/: c_implementation.rst  conf.py  index.rst  intro.rst  plecs_example.rst  quickstart.rst
sim/opil/simif/: simif.c  simif.h
sim/opil/sw/plecs/: make_opil_plecs.mk  opil_plecs.c
user/: .ccsproject  .cproject  .project  makefile.init  xds110.ccxml
